...
        left={0}
        right={0}
      >
        <View paddingHorizontal="$l" paddingTop="$xl">
          <TextInput
            ref={inputRef}
            icon="Search"
            placeholder="Filter by name"
            value={query}
            onChangeText={onQueryChange}
            spellCheck={false}
            autoCorrect={false}
            autoCapitalize="none"
            rightControls={
              <TextInput.InnerButton
                label={query !== '' ? 'Clear' : 'Close'}
                onPress={query !== '' ? onPressClear : onPressClose}
              />
            }
          />
        </View>
      </YStack>
...
