...
          </YStack>

          <YStack gap="$l">
            <Button onPress={onOpenWeb} label="Visit tlon.io" centered shadow />
            <Button
              onPress={() => onOpenChange(false)}
              label="Not now"
              preset="secondary"
              backgroundColor="$transparent"
              centered
            />
          </YStack>
        </YStack>
...
