...
            placement="navigation"
            rightActions={[
              { id: 'search', icon: 'Search', label: 'Search', onPress: noop },
              {
                id: 'add-chat',
                icon: 'Add',
                label: 'Add a chat',
                onPress: noop,
              },
            ]}
          />
          <ChatList
            data={[{ title: 'All', data: homeChats }]}
...
